--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,5 +1,21 @@
 .carrusel {
-    text-align: center;
     background-color: double red;
     margin: 10px;
+    
+}
+
+section {
+    background-color: aquamarine;
+
+}
+
+article {
+    background-color: bisque;
+    margin: 20px;
+    }
+
+.tarjeta {
+    background-color: red;
+    width: 700px;
+    height: 700px;
 }
