--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,9 +7,20 @@
   text-align: center; }
 
 .carrusel {
-  text-align: center;
   background-color: double red;
   margin: 10px; }
+
+section {
+  background-color: aquamarine; }
+
+article {
+  background-color: bisque;
+  margin: 20px; }
+
+.tarjeta {
+  background-color: red;
+  width: 700px;
+  height: 700px; }
 
 footer {
   background-color: red;
