--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,10 +17,24 @@ nav {
 body {
   background-color: blue; }
 
+/* Carrusel del index */
 .carrusel {
   background-color: double red;
   margin: 10px; }
 
+/* Carrusel de Automaquillaje*/
+.carruselRetrato {
+  background-color: red;
+  margin: 10px; }
+
+/*
+@media (min-width:800px) {
+    .carousel-inner {
+        width: auto;
+        height: auto;
+    }
+}
+*/
 section {
   background-color: aquamarine;
   margin: 10px;
@@ -30,6 +44,7 @@ article {
   background-color: bisque;
   margin: 20px; }
 
+/* Tarjeta + Card "Index" */
 .tarjeta {
   background-color: red;
   width: auto;
@@ -39,6 +54,16 @@ article {
 .card {
   margin-left: 20px; }
 
+/*Automaquillaje*/
+.fotosmaquillajesocial {
+  text-align: center; }
+
+.subtitle {
+  font-family: cursive;
+  text-align: center;
+  margin: 10pt; }
+
+/* Sobre Mi */
 footer {
   background-color: red;
   border: double black;
