--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: red;
+    background-color:gold;
     border: double black;
     font-family: cursive;
     margin: 10px;
