--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,7 @@
 footer {
-    background-color:gold;
+    background-color: white;
     border: double black;
     font-family: cursive;
     margin: 10px;
+
 }
