--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,13 +2,15 @@
     font-size: 25px;
     font-family: cursive;
     border: double black;
-    background-color: red;
+    background-color: white;
     margin: 10px;
     text-align: center;
 }
 
 header {
-    width: 100%;    
+    width: 100%; 
+    background-color: white;
+    
 }
 
 
