--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,40 +1,46 @@
-.titulo {
-  font-size: 25px;
-  font-family: cursive;
-  border: double black;
-  background-color: white;
-  margin: 10px;
-  text-align: center; }
-
 header {
   width: 100%;
-  background-color: white; }
+  background-color: none; }
+
+h1 {
+  font-size: 35px;
+  font-family: cursive;
+  border: double black;
+  background-color: none;
+  margin: 10px;
+  text-align: center; }
 
 .container-fluid {
   width: 100%; }
 
 nav {
   margin: 10px;
-  border: double black; }
+  border: double black;
+  background-color: none; }
 
 * {
   margin: 0%;
   padding: 0%; }
 
 body {
-  background-color: white;
+  background-color: none;
   margin: 2pt;
   padding: 2pt;
-  border: double black; }
+  border: double black;
+  background-image: url(../img/fondo2.jpeg);
+  background-size: 90% auto;
+  background-position: center top;
+  background-repeat: repeat-y; }
 
+/*Contacto*/
 /* Carrusel del index */
 .carrusel {
-  background-color: white;
+  background-color: none;
   margin: 10px; }
 
 /* Carrusel de Automaquillaje*/
 .carruselRetrato {
-  background-color: white;
+  background-color: none;
   margin: 10px; }
 
 /*
@@ -46,19 +52,19 @@ body {
 }
 */
 section {
-  background-color: white;
+  background-color: none;
   margin: 10px;
   padding: 5pt;
   border: double black; }
 
 article {
-  background-color: white;
+  background-color: none;
   margin: 20px;
   padding: 5pt; }
 
 /* Tarjeta + Card "Index" */
 .tarjeta {
-  background-color: white;
+  background-color: none;
   width: auto;
   margin: 10px;
   padding: 10pt; }
@@ -96,12 +102,12 @@ h3 {
 
 /* Cursos */
 h4 {
-  text-align: justify;
+  text-align: center;
   font-family: cursive;
   font-size: medium; }
 
 footer {
-  background-color: white;
+  background-color: none;
   border: double black;
   font-family: cursive;
   margin: 10px; }
