--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,17 +1,19 @@
-.titulo {
-    font-size: 25px;
+header {
+    width: 100%; 
+    background-color: none    
+}
+
+
+h1 {
+    font-size: 35px;
     font-family: cursive;
     border: double black;
-    background-color: white;
+    background-color: none;
     margin: 10px;
     text-align: center;
 }
 
-header {
-    width: 100%; 
-    background-color: white;
-    
-}
+
 
 
 .container-fluid {
