--- a/css/estilo.css
+++ b/css/estilo.css
@@ -74,24 +74,15 @@ article {
   border: double black; }
 
 /*Maquillaje Social*/
+.artMaquillajeSocial {
+  border: double black;
+  text-align: center; }
+
 h2 {
   text-align: center;
   font-family: cursive;
   text-align: center;
   margin: 5pt;
-  border: double black; }
-
-.artMaquillajeSocial {
-  border: double black;
-  text-align: center; }
-
-/* Sobre Mi */
-.retrato {
-  text-align: center;
-  border: double black; }
-
-.informacion {
-  height: auto;
   border: double black; }
 
 h3 {
@@ -104,7 +95,17 @@ h3 {
 h4 {
   text-align: center;
   font-family: cursive;
-  font-size: medium; }
+  font-size: medium;
+  color: black; }
+
+/* Sobre Mi */
+.retrato {
+  text-align: center;
+  border: double black; }
+
+.informacion {
+  height: auto;
+  border: double black; }
 
 footer {
   background-color: none;
