--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -75,6 +75,11 @@ article {
 
 /*Maquillaje Social*/
 
+.artMaquillajeSocial {
+    border: double black;
+    text-align: center;
+}
+
 h2 {
     text-align: center;    
     font-family: cursive;
@@ -83,11 +88,25 @@ h2 {
     border: double black;       
 }
 
-.artMaquillajeSocial {
-    border: double black;
+h3 {
+    margin-top: 40pt;
+    padding: 10pt;
+    font-family: cursive;
     text-align: center;
+    
+    
 }
 
+/* Cursos */
+
+h4 {
+    text-align: center;
+    font-family: cursive;
+    font-size: medium;
+    color: black;
+    
+
+}
 
 /* Sobre Mi */
 
@@ -101,18 +120,3 @@ h2 {
     border: double black;
 }
 
-h3 {
-    margin-top: 40pt;
-    padding: 10pt;
-    font-family: cursive;
-    text-align: center;
-    
-}
-
-/* Cursos */
-
-h4 {
-    text-align: center;
-    font-family: cursive;
-    font-size: medium;
-}
