--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,11 +101,19 @@ h4 {
 /* Sobre Mi */
 .retrato {
   text-align: center;
-  border: double black; }
+  border: double black;
+  height: auto;
+  margin: 10px; }
 
 .informacion {
   height: auto;
   border: double black; }
+
+.presentacion {
+  border: double black;
+  height: auto;
+  margin: 10px;
+  padding-bottom: 90px; }
 
 footer {
   background-color: none;
